--- a/src/componentes/Formulario/Campo/Campo.module.scss
+++ b/src/componentes/Formulario/Campo/Campo.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/_variaveis.scss';
 
 .campo {
-    margin: 1.5em 0;
+    // margin: 1.5em 0;
     font-size: 1.5em;
     text-align: left;
 
@@ -13,7 +13,7 @@
     }
 
     input {
-        width: 80%;
+        width: 100%;
         box-sizing: border-box;
         padding: 0.5rem;
     }
