--- a/src/paginas/Cadastro/Cadastro.module.scss
+++ b/src/paginas/Cadastro/Cadastro.module.scss
@@ -3,9 +3,9 @@
 
 .principal {
     text-align: center;
+    margin: 0 10vw;
 
-    &__formulario {
-        width: 80vw;
-        margin-left:auto;
-    }
+    // &__formulario {
+    //     margin-left:auto;
+    // }
 }
