--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -10,6 +10,7 @@ $cinza-escuro: #202020;
 $preto: #000000;
 $azul-claro: #4b4bff;
 $azul: #0d0dd6;
+$azul-escuro: #0a0a36;
 $verde: #128C7E;
 $verde-wpp: #25D366;
 $verde-escuro: #09453e;
