--- a/src/componentes/HallDaFama/HallDaFama.module.scss
+++ b/src/componentes/HallDaFama/HallDaFama.module.scss
@@ -1,7 +1,6 @@
 @import 'styles/_variaveis.scss';
 
 .hallDaFama {
-    padding: 16px 10%;
     text-align: center;
     background: url('/assets/img/background/cinza.png') no-repeat;
     background-position-y: -400px;
@@ -27,6 +26,7 @@
         align-items: center;
         list-style: none;
         margin-top: 16px;
+        padding: 1rem 10vw 0 10vw;
     }
 
 }
