--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -17,3 +17,7 @@ $verde-escuro: #09453e;
 $vermelho-yt: #FF0000;
 $dourado-claro: #e0c28b;
 $dourado: #806b0c;
+//Tamanho de tela
+$desktop: 1130px;
+$tablet: 800px;
+$mobile: 500px;
