--- a/src/componentes/HallDaFama/TemporadaResumo/TemporadaResumo.module.scss
+++ b/src/componentes/HallDaFama/TemporadaResumo/TemporadaResumo.module.scss
@@ -2,7 +2,7 @@
 
 .temporadaResumo {
     color: $cor-texto;
-    width: 400px;
+    width: 336px;
     text-align: center;
     background-color: $cinza-escuro;
     box-shadow: 8px 8px 8px rgba($color: #000000, $alpha: 0.25);
@@ -21,16 +21,16 @@
         }
 
         &__duracao {
-            text-align: center;
-            width: 20%;
+            display: flex;
+            align-items: center;
+            width: 26%;
             background-color: $preto;
-            margin-bottom: 8px;
             border-radius: 0px 8px 0 0;
         }
     }
 
     &__video {
-        width: 380px;
+        width: 320px;
         margin: 8px 0;
         border: none;
         border-radius: 8px;
