--- a/src/paginas/PaginaPadrao/PaginaPadrao.module.scss
+++ b/src/paginas/PaginaPadrao/PaginaPadrao.module.scss
@@ -5,6 +5,6 @@
     margin: 0 auto;
     justify-content: space-around;
     align-items: center;
-    background-color: $preto;
+    background-color: $cinza-escuro;
     width: $desktop;
 }
