--- a/src/componentes/Formulario/Campo/Campo.module.scss
+++ b/src/componentes/Formulario/Campo/Campo.module.scss
@@ -2,21 +2,28 @@
 
 .campo {
     margin: 1rem 0;
-    font-size: 1.5rem;
     text-align: left;
 
     input {
         width: 100%;
         box-sizing: border-box;
-        padding: 0.5rem;
+        font-family: $fonte-principal;
+        font-size: 1.25em;
+        padding: 1rem;
         color: $cor-texto;
         background-color: $azul-escuro;
-        border: 1.5px solid $azul;
-        box-shadow: 8px 8px 8px rgba($color: #000000, $alpha: 0.25);
+        opacity: 0.7;
+        border: 0.125rem solid $azul-bebe;
+        border-radius: 0.5rem;
+        box-shadow: $sombra-de-caixa;
+    }
+
+    input:hover, input:focus {
+        opacity: 0.9;
     }
 
     input::placeholder {
         font-family: $fonte-principal;
-        font-size: 1.5em;
+        font-size: 1.25em;
     }
 }
