--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -1,6 +1,6 @@
 @import-normalize;
 @import './variaveis';
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;400;700&family=Outfit:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;400;700&family=Orbitron:wght@400;500;600;700&family=Outfit:wght@600&display=swap');
 
 * {
   margin: 0;
