Criação v0 tela de editar cadastro e funcionalidade

--- a/src/componentes/Formulario/Formulario.module.scss
+++ b/src/componentes/Formulario/Formulario.module.scss
@@ -10,6 +10,8 @@
     &__titulo {
         font-size: 3rem;
         color: $cor-texto;
+        font-family: $fonte-orbitron;
+        font-weight: 200;
     }
 
     &__container {
