--- a/src/componentes/Logo/Logo.module.scss
+++ b/src/componentes/Logo/Logo.module.scss
@@ -1,6 +1,7 @@
 @import 'styles/_variaveis.scss';
 
 .logo {
+    margin-top: 3rem;
     background-color: $azul-escuro;
     border-radius: 100%;
     width: 11.5rem;
