Adicionando menu na area do piloto

--- a/src/componentes/Piloto/Piloto.module.scss
+++ b/src/componentes/Piloto/Piloto.module.scss
@@ -3,11 +3,15 @@
 .piloto {
     background: url('/assets/img/background/background_results.png') no-repeat;
     color: $cor-texto;
-    text-align: center;
+    text-align: left;
     border-radius: 10%;
 
     &__detalhes {
-        padding: 2rem;
+        padding: 1rem 2rem;
+    }
+
+    &__menu {
+        margin-right: auto;
     }
 
     &__perfil {
@@ -25,11 +29,13 @@
     }
 
     &__titulo {
+        text-align: center;
         margin: 1rem 0;
         font-size: 1.75rem;
     }
 
-    &__informacoes {
+    &__texto {
+        text-align: center;
         font-size: 1.25rem;
     }
 }
