--- a/src/componentes/Cabecalho/Cabecalho.module.scss
+++ b/src/componentes/Cabecalho/Cabecalho.module.scss
@@ -4,6 +4,7 @@
     background-image: url('/assets/img/background/top.svg');
     background-repeat: no-repeat;
     background-size: 100%;
+    background-position-y: center;
     text-align: center;
     color: $cor-texto;
     padding: 1.5em 0;
