--- a/src/componentes/Noticias/Noticias.module.scss
+++ b/src/componentes/Noticias/Noticias.module.scss
@@ -2,6 +2,7 @@
 
 .noticias {
     background-color: $preto;
+    justify-content: space-between;
     border-radius: 8px;
     padding: 8px;
     color: $cor-texto;
