--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -20,6 +20,7 @@ $vermelho-yt: #FF0000;
 $dourado-claro: #e0c28b;
 $dourado: #806b0c;
 //Tamanho de tela
+$desktop-ultrawide: 1500px;
 $desktop: 1130px;
 $tablet: 800px;
 $mobile: 500px;
