--- a/src/componentes/EventosDestaque/EventosDestaque.module.scss
+++ b/src/componentes/EventosDestaque/EventosDestaque.module.scss
@@ -3,7 +3,7 @@
 .eventosDestaque {
     color: $cor-texto;
     background-color: $preto;
-    width: 736px;
+    max-width: $tablet;
     border-radius: 12px;
 
     &__titulo {
@@ -22,6 +22,13 @@
         img {
             padding: 8px;
             cursor: pointer;
+        }
+    }
+}
+
+@media (max-width: 1100px) {
+    .eventosDestaque {
+        &__video {
         }
     }
 }
