--- a/src/componentes/Cabecalho/Cabecalho.module.scss
+++ b/src/componentes/Cabecalho/Cabecalho.module.scss
@@ -3,8 +3,9 @@
 .cabecalho {
     background-image: url('/assets/img/background/top.svg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-position-y: center;
+    background-position-x: center;
     text-align: center;
     color: $cor-texto;
     padding: 1.5em 0;
