--- a/src/componentes/EventosDestaque/EventosDestaque.module.scss
+++ b/src/componentes/EventosDestaque/EventosDestaque.module.scss
@@ -26,9 +26,13 @@
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: $desktop) {   
+    
     .eventosDestaque {
+        width: 500px;
+
         &__video {
+            width: 400px;
         }
     }
 }
