--- a/src/paginas/Login/Login.module.scss
+++ b/src/paginas/Login/Login.module.scss
@@ -4,7 +4,7 @@
     text-align: center;
     background: url('/assets/img/background/mercedes.png') no-repeat;
     background-size: 100%;
-    background-position-y: -25rem;
+    background-position-y: center;
     padding: 1rem 25vw;
     color: $cor-texto;
 
