--- a/src/componentes/HallDaFama/TemporadaResumo/TemporadaResumo.module.scss
+++ b/src/componentes/HallDaFama/TemporadaResumo/TemporadaResumo.module.scss
@@ -2,7 +2,7 @@
 
 .temporadaResumo {
     color: $cor-texto;
-    width: 336px;
+    width: $mobile;
     text-align: center;
     background-color: $cinza-escuro;
     box-shadow: 8px 8px 8px rgba($color: #000000, $alpha: 0.25);
