--- a/src/componentes/Noticias/Noticia/Noticia.module.scss
+++ b/src/componentes/Noticias/Noticia/Noticia.module.scss
@@ -13,3 +13,15 @@
         border-radius: 8px;
     }
 }
+
+@media (max-width: $tablet) {   
+    .noticia {
+        justify-content: space-around;
+        
+        &__img {
+        width: 200px;
+        border-radius: 8px;
+        }
+    }
+    
+}
