--- a/src/componentes/UltimasNoticias/UltimasNoticas.module.scss
+++ b/src/componentes/UltimasNoticias/UltimasNoticas.module.scss
@@ -24,7 +24,7 @@
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: $desktop) {
     .ultimasNoticias {
         max-width: $tablet;
     
