--- a/src/paginas/Inicio/Inicio.module.scss
+++ b/src/paginas/Inicio/Inicio.module.scss
@@ -12,19 +12,32 @@
     &__container {
         width: $desktop;
         display: flex;
-        justify-content: space-between;
         margin: 1rem 0;
         text-align: center;
+        justify-content: space-between;
     }
 }
 
-@media (max-width: 1100px){
+@media (max-width: $desktop){
     .principal__container {
-        width: $mobile;
+        width: $tablet;
         margin: 1rem auto;
-        justify-content: space-evenly;
     }
 }
+
+@media (max-width: $tablet){
+    .principal__container {
+        width: $mobile;
+        flex-direction: column;
+    }
+}
+
+
+
+
+
+
+
 
 
 .tabelas{
