Responsividade do Cadastro e redimencionar a foto do perfil

--- a/src/componentes/Formulario/Campo/Campo.module.scss
+++ b/src/componentes/Formulario/Campo/Campo.module.scss
@@ -27,3 +27,12 @@
         font-size: 1.25em;
     }
 }
+
+@media (max-width: $desktop){
+
+    .campo {
+        input {
+            font-size: 1em;
+        }
+    }
+}
