--- a/src/componentes/Formulario/Botao/Botao.module.scss
+++ b/src/componentes/Formulario/Botao/Botao.module.scss
@@ -16,3 +16,36 @@
     font-size: 3.2rem;
     transition: 500ms;
 }
+
+
+@media (max-width: $desktop){
+    .botao {
+        font-size: 2.5rem;
+    }
+
+    .botao:hover {
+        font-size: 2.8rem;
+    }
+}
+
+@media (max-width: $tablet){
+    .botao {
+        font-size: 2rem;
+    }
+
+    .botao:hover {
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: $mobile){
+    .botao {
+        font-size: 1.5rem;
+    }
+
+    .botao:hover {
+        font-size: 2rem;
+    }
+}
+
+
