--- a/src/componentes/Formulario/Formulario.module.scss
+++ b/src/componentes/Formulario/Formulario.module.scss
@@ -3,7 +3,7 @@
 .formulario {
     text-align: center;
     background-color: transparent;
-    padding: 1rem;
+    padding: 1rem 0;
     color: $cor-texto;
     // box-shadow: 8px 8px 8px rgba($color: #000000, $alpha: 0.25);
 
@@ -15,6 +15,8 @@
     }
 
     &__container {
+        margin: 0 auto;
+        width: $desktop;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -24,3 +26,37 @@
         }
     }
 }
+
+@media (max-width: $desktop){
+    .formulario__container{
+        width: $tablet;
+    }
+
+    .formulario__titulo {
+        font-size: 2em;      
+    }
+}
+
+
+@media (max-width: $tablet){
+    .formulario__container{
+        width: $mobile;
+        flex-direction: column;
+    }
+
+    .formulario__titulo {
+        font-size: 2em;        
+    }
+}
+
+@media (max-width: 420px){
+    .formulario__container{
+        width: 275px;
+    }
+
+    .formulario__titulo {
+        font-size: 1.75em;        
+    }
+}
+
+
