--- a/src/paginas/Cadastro/Cadastro.module.scss
+++ b/src/paginas/Cadastro/Cadastro.module.scss
@@ -2,17 +2,37 @@
 
 
 .principal {
-    padding: 1rem 20vw;
+    margin: 0 auto;
     text-align: center;
     background: url('/assets/img/background/mercedes.png') no-repeat;
-    background-size: 100%;
+    background-position: center center;
+    background-size: cover;
     padding-top: 1rem;
 
-    &__titulo {
+    &__titulo {        
         font-size: 4rem;
         padding-top: 2rem;
         color: $cor-texto;
         font-family: $fonte-principal;
         font-weight: 400;
+    }
+}
+
+
+@media (max-width: $desktop){
+    .principal__titulo{ 
+        font-size: 3em;
+    }
+}
+
+@media (max-width: $tablet){
+    .principal__titulo{ 
+        font-size: 2.5em;
+    }
+}
+
+@media (max-width: $mobile){
+    .principal__titulo{ 
+        font-size: 2em;
     }
 }
